[gd_scene load_steps=25 format=2]

[ext_resource path="res://Sprites/enemy/pig/Run01.png" type="Texture" id=1]
[ext_resource path="res://Scenes/EnemyScript.gd" type="Script" id=2]
[ext_resource path="res://Sprites/enemy/pig/Run02.png" type="Texture" id=3]
[ext_resource path="res://Sprites/enemy/pig/Run03.png" type="Texture" id=4]
[ext_resource path="res://Sprites/enemy/pig/Run04.png" type="Texture" id=5]
[ext_resource path="res://Sprites/enemy/pig/Run06.png" type="Texture" id=6]
[ext_resource path="res://Sprites/enemy/pig/Run05.png" type="Texture" id=7]
[ext_resource path="res://Sprites/enemy/pig/Hit01.png" type="Texture" id=8]
[ext_resource path="res://Sprites/enemy/pig/Hit02.png" type="Texture" id=9]
[ext_resource path="res://Sprites/enemy/pig/Dead002 - Copy.png" type="Texture" id=10]
[ext_resource path="res://Sprites/enemy/pig/Dead001 - Copy.png" type="Texture" id=11]
[ext_resource path="res://Sprites/enemy/pig/Dead003 - Copy.png" type="Texture" id=12]
[ext_resource path="res://Sprites/enemy/pig/Dead004 - Copy.png" type="Texture" id=13]
[ext_resource path="res://Sprites/enemy/pig/atk004.png" type="Texture" id=14]
[ext_resource path="res://Scenes/Enemies/bounceZone.tscn" type="PackedScene" id=15]
[ext_resource path="res://Sprites/enemy/pig/atk001.png" type="Texture" id=16]
[ext_resource path="res://Sprites/enemy/pig/atk003.png" type="Texture" id=17]
[ext_resource path="res://Sprites/enemy/pig/atk005.png" type="Texture" id=18]
[ext_resource path="res://Scenes/FCTManager.tscn" type="PackedScene" id=19]
[ext_resource path="res://Lifebar.tscn" type="PackedScene" id=20]
[ext_resource path="res://Scenes/BloodSplatterComponent.tscn" type="PackedScene" id=21]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 14 ) ],
"loop": false,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "Run",
"speed": 6.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Hit",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.5, 7 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9.16667, 6.25 )

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 1.2, 1.2 )
collision_layer = 48
collision_mask = 16527
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1, 1.03333 )
frames = SubResource( 2 )
animation = "Run"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 136

[node name="topchecker" parent="." instance=ExtResource( 15 )]

[node name="SideChecker" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 16521

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideChecker"]
position = Vector2( 2.98023e-07, 0 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]

[node name="FCTManager" parent="." instance=ExtResource( 19 )]

[node name="HealthDisplay" parent="." instance=ExtResource( 20 )]
position = Vector2( -5.96046e-08, -8.33333 )
scale = Vector2( 0.08, 0.08 )

[node name="BloodSplatterComponent" parent="." instance=ExtResource( 21 )]

[connection signal="body_entered" from="topchecker" to="." method="_on_topchecker_body_entered"]
[connection signal="body_entered" from="SideChecker" to="." method="_on_SideChecker_body_entered"]
